test correction iOS

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,18 @@ ul, ol {
     background-attachment: fixed;
 }
 
+@media (max-width: 1024px) {
+.panel-row-style {
+background-attachment: scroll !important;
+}
+}
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)  {
+     .panel-row-style { background-attachment: scroll !important; }
+}
+
 .bg-img .overlay {
     position: absolute;
     left: 0;
